<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/selectableItemBackground"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imv_state_view_icon"
        android:layout_width="@dimen/state_view_drawable_size"
        android:layout_height="@dimen/state_view_drawable_size"
        android:src="@drawable/head_portrait_def"/>

    <TextView
        android:id="@+id/tv_state_view_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/state_view_padding_t"
        android:text="@string/unauth"
        android:textColor="@color/state_view_tv_1"
        android:textSize="@dimen/state_view_title_size"/>

    <TextView
        android:id="@+id/tv_state_view_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/state_view_padding_t"
        android:text="@string/retry"
        android:textColor="@color/state_view_tv_2"
        android:textSize="@dimen/state_view_subtitle_size"
        android:visibility="gone"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_state_view"
        style="@style/Widget.StateView.Button"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/state_view_btn_height"
        android:layout_marginTop="@dimen/state_view_padding_t"
        android:text="@string/auth"/>

</LinearLayout>